--- a/src/components/multiselect/MultiSelect.scss
+++ b/src/components/multiselect/MultiSelect.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   text-align: center;
   position: relative;
-  min-width: 250px;
+  width: 100%;
   border: 4px double #000;
 
   &:hover {
@@ -21,6 +21,7 @@
   width: 100%;
   height: 100%;
   border: 0;
+  padding: 5px 20px;
 }
 
 .pagination {
