--- a/src/components/select/Select.scss
+++ b/src/components/select/Select.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   text-align: center;
   position: relative;
-  min-width: 250px;
+  width: 100%;
   border: 4px double #000;
 
   &:hover {
