--- a/src/components/multiselect/MultiSelect.scss
+++ b/src/components/multiselect/MultiSelect.scss
@@ -1,8 +1,9 @@
 .multiselect-container {
-  display: inline-block;
-  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   position: relative;
-  width: 100%;
+  width: 200%;
   border: 4px double #000;
 
   &:hover {
@@ -14,6 +15,10 @@
   width: 100%;
   border: 4px double #000;
   margin-left: -4px;
+}
+
+.multiselect-item {
+  margin: 1px 2px;
 }
 
 .search-field {
